# ocamly-lsp

./: dune-project  json_rpc.opam  ocamly_lsp.opam
libs/json_rpc/: dune  json_rpc.ml  json_rpc.mli
libs/json_rpc/test/: dune  test.ml  test_error.ml  test_error.mli  test_notification.ml  test_notification.mli  test_request.ml  test_request.mli  test_response.ml  test_response.mli  testable.ml  testable.mli
libs/json_rpc/test/json/: error.json  notification.json  request.json  response.json
libs/lsp/: client_capabilities.mli  dune  notifications.mli  params.mli  types.mli
src/: dune  main.ml
